RESOLVED FIXED62036
Video with poster attribute will not display new frames when scrubbing. (AVFoundation)
https://bugs.webkit.org/show_bug.cgi?id=62036
Summary Video with poster attribute will not display new frames when scrubbing. (AVFo...
Jer Noble
Reported 2011-06-03 12:01:01 PDT
Video with poster attribute will not display new frames when scrubbing.
Attachments
Patch (2.64 KB, patch)
2011-06-03 13:16 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2011-06-03 12:02:33 PDT
This bug only reproduces on Lion using AVFoundation. 1. Create a html document and a video element with the format: <video src="movie" poster="poster" controls></video> 2. Load the page in Safari 3. Drag the timeline slider 4. Frame stays at the poster image.
Jer Noble
Comment 2 2011-06-03 12:02:38 PDT
Jer Noble
Comment 3 2011-06-03 12:02:47 PDT
Looks like a timing issue. AVFoundation is firing our seekToTime: completion block handler before our periodic time observer. By the time the timeChanged notification in handled, our m_seekTo variable has already been reset, and the notification is dropped.
Jer Noble
Comment 4 2011-06-03 13:16:36 PDT
Adele Peterson
Comment 5 2011-06-07 15:04:59 PDT
Comment on attachment 95953 [details] Patch Marking cq+ to expedite this!
WebKit Review Bot
Comment 6 2011-06-07 16:02:32 PDT
Comment on attachment 95953 [details] Patch Clearing flags on attachment: 95953 Committed r88279: <http://trac.webkit.org/changeset/88279>
WebKit Review Bot
Comment 7 2011-06-07 16:02:36 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.