2011-06-07  Jer Noble  <jer.noble@apple.com>

Reviewed by Eric Carlson.

        Video with poster attribute will not display new frames when scrubbing.
        https://bugs.webkit.org/show_bug.cgi?id=62036

        Remove our "detection" about the end of a scrub now that there is an explicit seek completion
        handler available in AVFoundation.  Move what we used to do upon detection in timeChanged()
        into seekCompleted().

        * platform/graphics/avfoundation/MediaPlayerPrivateAVFoundation.cpp:
        (WebCore::MediaPlayerPrivateAVFoundation::timeChanged):
        (WebCore::MediaPlayerPrivateAVFoundation::seekCompleted):

Canonical link: https://commits.webkit.org/77716@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@88279 268f45cc-cd09-0410-ab3c-d52691b4dbfc